View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028065 | Open CASCADE | OCCT:Modeling Algorithms | public | 2016-11-07 19:58 | 2016-12-09 16:39 |
Reporter | msv | Assigned To | apn | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0028065: [Regression to 7.0] The method HLRAppli_ReflectLines::GetResult must be const | ||||
Description | The method HLRAppli_ReflectLines::GetResult must be const, but it is declared as non-const. Recently added method GetCompoundOf3dEdges must be declared const as well. | ||||
Steps To Reproduce | Not needed | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28065 has been created by msv. SHA-1: 342402887947bbdae70ddfde581b91719224f237 Detailed log of new commits: Author: msv Date: Mon Nov 7 20:05:58 2016 +0300 0028065: [Regression to 7.0] The method HLRAppli_ReflectLines::GetResult must be const |
|
Dear Julia, please review the branch CR28065. |
|
Ok. |
|
Testing is not necessary, just check compilation |
|
Tested in scope of CR0-IR-2016-11-08 |
|
Branch CR28065 has been deleted by kgv. SHA-1: 342402887947bbdae70ddfde581b91719224f237 |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-11-07 19:58 | msv | New Issue | |
2016-11-07 19:58 | msv | Assigned To | => msv |
2016-11-07 20:07 | git | Note Added: 0059954 | |
2016-11-07 20:07 | msv | Status | new => assigned |
2016-11-07 20:08 | msv | Note Added: 0059955 | |
2016-11-07 20:08 | msv | Assigned To | msv => jgv |
2016-11-07 20:08 | msv | Status | assigned => resolved |
2016-11-07 20:08 | msv | Steps to Reproduce Updated | |
2016-11-08 13:15 | jgv | Note Added: 0060001 | |
2016-11-08 13:15 | jgv | Assigned To | jgv => bugmaster |
2016-11-08 13:15 | jgv | Status | resolved => reviewed |
2016-11-08 13:54 | abv | Note Added: 0060005 | |
2016-11-09 12:01 |
|
Test case number | => Not needed |
2016-11-09 12:01 |
|
Note Added: 0060091 | |
2016-11-09 12:01 |
|
Status | reviewed => tested |
2016-11-09 17:43 | apn | Changeset attached | => occt master e7b01db7 |
2016-11-09 17:43 | apn | Assigned To | bugmaster => apn |
2016-11-09 17:43 | apn | Status | tested => verified |
2016-11-09 17:43 | apn | Resolution | open => fixed |
2016-12-07 11:31 | git | Note Added: 0061274 | |
2016-12-09 16:29 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |