0028065: [Regression to 7.0] The method HLRAppli_ReflectLines::GetResult must be const