src/HLRAppli/HLRAppli_ReflectLines.cxx
@@ -92,7 +92,7 @@ void HLRAppli_ReflectLines::Perform()
 
 TopoDS_Shape HLRAppli_ReflectLines::GetCompoundOf3dEdges(const HLRBRep_TypeOfResultingEdge type,
                                                          const Standard_Boolean            visible,
-                                                         const Standard_Boolean            In3d)
+                                                         const Standard_Boolean            In3d) const
 {
   HLRBRep_HLRToShape aHLRToShape( myHLRAlgo );
 
@@ -108,7 +108,7 @@ TopoDS_Shape HLRAppli_ReflectLines::GetCompoundOf3dEdges(const HLRBRep_TypeOfRes
 //purpose  :
 //=======================================================================
 
-TopoDS_Shape HLRAppli_ReflectLines::GetResult()
+TopoDS_Shape HLRAppli_ReflectLines::GetResult() const
 {
   return GetCompoundOf3dEdges(HLRBRep_OutLine, Standard_True, Standard_True);
 }
