src/HLRAppli/HLRAppli_ReflectLines.hxx
@@ -51,14 +51,14 @@ public:
   
   //! returns resulting compound of reflect lines
   //! represented by edges in 3d
-  Standard_EXPORT TopoDS_Shape GetResult();
+  Standard_EXPORT TopoDS_Shape GetResult() const;
 
   //! returns resulting compound of lines
   //! of specified type and visibility
   //! represented by edges in 3d or 2d
   Standard_EXPORT TopoDS_Shape GetCompoundOf3dEdges(const HLRBRep_TypeOfResultingEdge type,
                                                     const Standard_Boolean            visible,
-                                                    const Standard_Boolean            In3d);
+                                                    const Standard_Boolean            In3d) const;
 
 
 
